# caproj-sandbox

./: .travis.yml  404.html  CHANGELOG.rst  Pipfile  README.rst  changelog.html  genindex.html  index.html  introduction.html  logging.json  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-test-matrix.yml  test_matrix.yml
_static/: documentation_options.js
docs/: conf.py  index.rst  modules.rst
notebooks/: Untitled.ipynb
src/caproj/: __init__.py  __main__.py  cli.py  logger.py
src/caproj/data/: __init__.py  base.py  clean.py
src/caproj/features/: __init__.py
src/caproj/logger/: __init__.py  logger.py
src/caproj/models/: __init__.py
src/caproj/visualization/: __init__.py
src/caproj/visualizations/: __init__.py
tests/: test_caproj.py
tests/data/: test_base.py  test_clean.py  test_data.py
tests/features/: test_features.py
tests/logger/: test_logger.py
tests/models/: test_models.py
tests/visualization/: test_visualization.py
tests/visualizations/: test_visualizations.py
